# sudoku-solver

./: Cargo.toml  LICENSE.md
.cargo/: config.toml
benches/: rule-efficiency.rs  scalar-vs-simd.rs
src/: grid.rs  lib.rs  main.rs  rule.rs  simd_grid.rs
src/grid/: region.rs
src/rule/: standard.rs
