[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

#[[bench]]
#name = "rule-efficiency"
#harness = false

[[bench]]
name = "scalar-vs-simd"
harness = false

[dependencies]
smallvec = { version = "1.13.2", features = ["union", "const_generics"] }
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"
